--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mantine/hooks": "^6.0.13",
     "@mantine/utils": "^6.0.13",
     "@syncfusion/ej2": "^19.4.48",
+    "@syncfusion/ej2-base": "^21.2.3",
+    "@syncfusion/ej2-react-buttons": "^21.2.6",
     "@syncfusion/ej2-react-calendars": "^19.4.48",
     "@syncfusion/ej2-react-charts": "^19.4.50",
     "@syncfusion/ej2-react-dropdowns": "^19.4.52",
@@ -20,6 +22,7 @@
     "@syncfusion/ej2-react-schedule": "^19.4.50",
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "axios": "^1.3.4",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
@@ -62,8 +65,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.4.6",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.2.7"
   }
 }
